test_suite/tests/ui/identifier/variant_tuple.stderr
error: variant_identifier may only contain unit variants
 --> $DIR/variant_tuple.rs:4:10
  |
4 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^

error: aborting due to previous error

